<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="80dp"
            android:id="@+id/img_login"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/background" />
        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            app:layout_constraintTop_toBottomOf="@id/img_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"
            android:textSize="36sp"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_describ_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_your_existant_account_of_q_allure"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="70dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />
        <EditText
            android:id="@+id/edt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_describ_login"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login"
            android:drawableStart="@drawable/ic_login"
            android:background="@drawable/white_corner"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_login"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_corner"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <TextView
            android:id="@+id/tv_forgot_passowrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/blue_corner"
            android:layout_marginTop="36dp"
            android:text="@string/log_in"/>
        <TextView
            android:id="@+id/conect_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_connect_using"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="150dp"/>
        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/conect_with"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_google"
            android:layout_marginTop="16dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_facebook"
            android:text="@string/facebook"
            android:background="@drawable/light_blue_corner"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/conect_with"
            app:layout_constraintStart_toEndOf="@id/btn_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:drawableStart="@drawable/ic_google"
            android:background="@drawable/rid_corner"
            android:text="@string/google"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintTop_toBottomOf="@id/btn_facebook"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/btn_facebook"
            app:layout_constraintStart_toEndOf="@id/signup"
            android:textColor="@color/facebook"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>