<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentSignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="let's Get Started!"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="36sp"
            android:layout_marginTop="100dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_describ_logup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Creat an account to Q Allura to get all feature"
            app:layout_constraintTop_toBottomOf="@id/tv_started"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />
        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_describ_logup"
            app:layout_constraintStart_toStartOf="parent"
            android:text="User Name"
            android:drawableStart="@drawable/ic_login"
            android:background="@drawable/white_corner"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_user_name"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Email"
            android:drawableStart="@drawable/ic_mail"
            android:background="@drawable/white_corner"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Phone"
            android:drawableStart="@drawable/ic_phone"
            android:background="@drawable/white_corner"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <EditText
            android:id="@+id/edt_password_sinup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_phone"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/password"
            android:drawableStart="@drawable/ic_lock"
            android:background="@drawable/white_corner"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <EditText
            android:id="@+id/edt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_password_sinup"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/confirm_password"
            android:drawableStart="@drawable/ic_lock"
            android:background="@drawable/white_corner"
            android:layout_marginTop="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <Button
            android:id="@+id/btn_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_password_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/blue_corner"
            android:layout_marginTop="36dp"
            android:textAllCaps="true"
            android:text="@string/create"/>
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            app:layout_constraintTop_toBottomOf="@id/btn_created"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login here"
            app:layout_constraintTop_toBottomOf="@id/btn_created"
            app:layout_constraintStart_toEndOf="@id/signup"
            android:textColor="@color/facebook"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>